Updated Favorite Games List

--- a/index.html
+++ b/index.html
@@ -135,21 +135,21 @@
 		<div class="content-bio-favgames-column-1">
 			<h3 class="favorites-headers">Favorite games lately:</h3>
 			<ul class="ul-favorites-list">
-				<li>Puck</li>
 				<li>World of Warcraft (Classic)</li>
-				<li>Balatro</li>
+				<li>Half-Life</li>
+				<li>Caves of Qud</li>
 				<li>Forza Motorsport</li>
-				<li>Caravan Sandwitch</li>
-				<li>Lethal Company</li>
+				<li>R.E.P.O.</li>
+				<li>Puck</li>
 			</ul>
 		</div>
 		<div class="content-bio-favgames-column-2">
 			<h3 class="favorites-headers">Anticipated games:</h3>
 			<ul class="ul-favorites-list">
 				<li>South of Midnight</li>
-				<li>Ghost of Yōtei</li>
-				<li>Gears of War: E-Day</li>
 				<li>Marathon</li>
+				<li>Gears of War: E-Day</li>
+				<li>Ghost of Yōtei</li>
 				<li>Grand Theft Auto 6</li>
 				<li>Splitgate 2</li>
 			</ul>
