Minor alt text update
Replaced a double-dash with an em dash (I think that's the word)

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 			</ul>
 		</div>
 		<div class="content-bio-img">
-			<img id="img-bio" src="images/Me.jpg" alt="A photo of me! I'm seated outdoors on a white chair in mostly-formal dress, clad in gray trousers, a white french-cuffed shirt rolled up to the elbows, black suspenders, a black bow tie, and my usual crisp pompadour haircut. I'm beaming-- a huge grin is hardly hidden by my short beard and mustache, and my eyes smile out from behind huge black-framed glasses. A white carnation clings to one suspender strap."/>
+			<img id="img-bio" src="images/Me.jpg" alt="A photo of me! I'm seated outdoors on a white chair in mostly-formal dress, clad in gray trousers, a white french-cuffed shirt rolled up to the elbows, black suspenders, a black bow tie, and my usual crisp pompadour haircut. I'm beaming— a huge grin is hardly hidden by my short beard and mustache, and my eyes smile out from behind huge black-framed glasses. A white carnation clings to one suspender strap."/>
 		</div>
 	</div>
 	<div id="Fav-Games" class="content-bio-favgames-div">
