Updated Favorite and Anticipated Games

--- a/index.html
+++ b/index.html
@@ -135,23 +135,23 @@
 		<div class="content-bio-favgames-column-1">
 			<h3 class="favorites-headers">Favorite games lately:</h3>
 			<ul class="ul-favorites-list">
+				<li>Peak</li>
 				<li>World of Warcraft (Classic)</li>
-				<li>Half-Life</li>
-				<li>Caves of Qud</li>
 				<li>Forza Motorsport</li>
-				<li>R.E.P.O.</li>
-				<li>Puck</li>
+				<li>Lil Gator Game</li>
+				<li>Art of Rally</li>
+				<li>Half-Life</li>
 			</ul>
 		</div>
 		<div class="content-bio-favgames-column-2">
 			<h3 class="favorites-headers">Anticipated games:</h3>
 			<ul class="ul-favorites-list">
-				<li>South of Midnight</li>
+				<li>Big Walk</li>
 				<li>Marathon</li>
+				<li>Star Wars: Zero Company</li>
 				<li>Gears of War: E-Day</li>
 				<li>Ghost of Yōtei</li>
 				<li>Grand Theft Auto 6</li>
-				<li>Splitgate 2</li>
 			</ul>
 		</div>
 		<div class="content-bio-favgames-column-3">
