--- a/index.html
+++ b/index.html
@@ -62,6 +62,14 @@
 		<h2 class="content-quicklinks-group-title">Quick Links</h2>
 		<div class="content-quick-link-div">
 			<div class="content-quick-link-separator">
+				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#WarnerBros">
+				<div class="content-quick-link-box">
+					<img id="img-quicklink-prev" src="images/WB-Preview.png" alt="A temporary preview image for Warner Brothers, bearing the golden shield logo." />
+					<p class="quick-link-text">Warner Brothers</p>
+				</div>
+				</a>
+			</div>
+			<div class="content-quick-link-separator">
 				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#HorizonWorlds">
 				<div class="content-quick-link-box">
 					<img id="img-quicklink-prev" src="images/HorizonWorlds-Preview.jpg" alt="A preview image for Meta Horizon Worlds, bearing the Meta logo and promotional art for the platform. Various grinning human characters play and socialize in a green area of a futuristic city." />
