--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 	<div id="Quick-Links" class="content-quicklinks-group-div">
 		<h2 class="content-quicklinks-group-title">Quick Links</h2>
 		<div class="content-quick-link-div">
+		<!--Meta-->
 			<div class="content-quick-link-separator">
 				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#HorizonWorlds">
 				<div class="content-quick-link-box">
@@ -69,6 +70,7 @@
 				</div>
 				</a>
 			</div>
+		<!--Forza-->
 			<div class="content-quick-link-separator">
 				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#Forza">
 				<div class="content-quick-link-box">
@@ -77,14 +79,7 @@
 				</div>
 				</a>
 			</div>
-			<!-- <div class="content-quick-link-separator">
-				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#Thesis">
-				<div class="content-quick-link-box">
-					<img id="img-quicklink-prev" src="images/Thesis-Preview.jpg" alt="A preview image for my Thesis, showing the two playable characters from the Unity FPS Sample. A slender human in an orange and white spacesuit and a taller, imposing, brown and black robot with a massive gun arm stand in a rocky alien desert." />
-					<p class="quick-link-text">Thesis</p>
-				</div>
-				</a>
-			</div> -->
+		<!--Troubadour-->
 			<div class="content-quick-link-separator">
 				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/more#Troubadour">
 				<div class="content-quick-link-box">
@@ -93,6 +88,7 @@
 				</div>
 				</a>
 			</div>
+		<!--Roboxing-->
 			<div class="content-quick-link-separator">
 				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#Roboxing">
 				<div class="content-quick-link-box">
@@ -101,6 +97,7 @@
 				</div>
 				</a>
 			</div>
+		<!--Reaper-->
 			<div class="content-quick-link-separator">
 				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/more#ReaperScripts">
 				<div class="content-quick-link-box">
