Added appropriate QuickLink comment

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	<div id="Quick-Links" class="content-quicklinks-group-div">
 		<h2 class="content-quicklinks-group-title">Quick Links</h2>
 		<div class="content-quick-link-div">
-		<!--Meta-->
+		<!--WarnerBros-->
 			<div class="content-quick-link-separator">
 				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#WarnerBros">
 				<div class="content-quick-link-box">
@@ -70,6 +70,7 @@
 				</div>
 				</a>
 			</div>
+		<!--Meta-->
 			<div class="content-quick-link-separator">
 				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#HorizonWorlds">
 				<div class="content-quick-link-box">
