--- a/games/index.html
+++ b/games/index.html
@@ -45,19 +45,19 @@
 		</div>
 	</div>
 <!--Main content-->
-<!--Warner Brothers-->
+<!--Fortnite-->
 <div class="content-main">
 <div id="WarnerBros">
 	<hr class="main_hr">
-		<h2 class="project-title">Warner Brothers</h2>
+		<h2 class="project-title">Fortnite: Battle Royale</h2>
 		<div class="project-div">
-			<h3 class="project-subtitle-text">Epic Games | Technical Sound Designer</h3>
+			<h3 class="project-subtitle-text">Warner Bros | Technical Sound Designer</h3>
 			<div class="project-content-left">
 				<p class="remove-top-margin-text">Lorem, Ipsum.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 				<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
 			</div>
 			<div class="project-content-right">
-				<iframe class="project-video-embed" src="https://www.youtube.com/embed/X_zzh-g2a4M" title="Youtube video, Meta Horizon Worlds Horizon Season trailer." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<iframe class="project-video-embed" src="https://www.youtube.com/embed/X_zzh-g2a4M" title="Youtube video, Fortnite Super Showdown Story Event trailer." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 				<p>Mauris vel odio non lorem porta venenatis. Pellentesque vehicula, dolor eget finibus eleifend, est enim feugiat ex, et placerat arcu velit nec nisl.</p>
 				<a class="download-button-link" target="_self" href="https://www.fortnite.com/download">Play on PC or Mobile</a>
 				<a class="download-button-link" target="_self" href="https://www.xbox.com/en-US/games/store/fortnite/bt5p2x999vh2">Xbox</a>
