--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
 	<div id="Quick-Links" class="content-quicklinks-group-div">
 		<h2 class="content-quicklinks-group-title">Quick Links</h2>
 		<div class="content-quick-link-div">
-		<!--WarnerBros-->
+		<!--Fortnite-->
 			<div class="content-quick-link-separator">
-				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#WarnerBros">
+				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#Fortnite">
 				<div class="content-quick-link-box">
-					<img id="img-quicklink-prev" src="images/WB-Preview.png" alt="A temporary preview image for Warner Brothers, bearing the golden shield logo." />
-					<p class="quick-link-text">Warner Brothers</p>
+					<img id="img-quicklink-prev" src="images/Fortnite-Preview.png" alt="A temporary preview image for Fortnite, simply bearing the golden Warner Brothers shield logo." />
+					<p class="quick-link-text">Fortnite</p>
 				</div>
 				</a>
 			</div>
