Fortnite Text 1st pass
Pretty WIP anyway, so this'll probably stick for the time being.

--- a/games/index.html
+++ b/games/index.html
@@ -53,12 +53,12 @@
 		<div class="project-div">
 			<h3 class="project-subtitle-text">Warner Bros | Technical Sound Designer</h3>
 			<div class="project-content-left">
-				<p class="remove-top-margin-text">Lorem, Ipsum.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-				<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+				<p class="remove-top-margin-text">Absolutely Unreal!<br><br>In 2025 I began working for Warner Brothers, almost entirely on Fortnite: Battle Royale.</p>
+				<p>At the moment of this writing, I'm still new on the team, so naturally this section is a work in progress. Stay tuned for all the exciting stuff we're working on!</p>
 			</div>
 			<div class="project-content-right">
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/X_zzh-g2a4M" title="Youtube video, Fortnite Super Showdown Story Event trailer." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-				<p>Mauris vel odio non lorem porta venenatis. Pellentesque vehicula, dolor eget finibus eleifend, est enim feugiat ex, et placerat arcu velit nec nisl.</p>
+				<p>You can play Fortnite for free on almost every platform imaginable. Below are just a few options.</p>
 				<a class="download-button-link" target="_self" href="https://www.fortnite.com/download">Play on PC or Mobile</a>
 				<a class="download-button-link" target="_self" href="https://www.xbox.com/en-US/games/store/fortnite/bt5p2x999vh2">Xbox</a>
 				<a class="download-button-link" target="_self" href="https://www.playstation.com/en-us/games/fortnite/">PS5</a>
@@ -78,7 +78,7 @@
 			</div>
 			<div class="project-content-right">
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/Sd7du11ZPZo" title="Youtube video, Meta Horizon Worlds Horizon Season trailer." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-				<p>Some worlds and events I've supported include
+				<p>Some worlds and events I supported include
 				<a class="decorated-links" target="_self" href="https://www.meta.com/blog/quest/connect-2024-horizon-worlds-behind-the-scenes/">Meta Connect 2024</a>,
 				<a class="decorated-links" target="_self" href="https://horizon.meta.com/world/10104211281051297/">Horizon Venues</a>, and
 				<a class="decorated-links" target="_self" href="https://horizon.meta.com/world/10161451989024108/?hwsh=H0bccjMPU5">Horizon Central</a>, available on a variety of platforms.</p>
