Updated Fortnite Preview Image

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 			<div class="content-quick-link-separator">
 				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#Fortnite">
 				<div class="content-quick-link-box">
-					<img id="img-quicklink-prev" src="images/Fortnite-Preview.png" alt="A temporary preview image for Fortnite, simply bearing the golden Warner Brothers shield logo." />
+					<img id="img-quicklink-prev" src="images/Fortnite-Preview.jpg" alt="A temporary preview image for Fortnite, simply bearing the golden Warner Brothers shield logo." />
 					<p class="quick-link-text">Fortnite</p>
 				</div>
 				</a>
