Added Fortnite Trailer embed
This _hopefully_ will work once published. Firefox has always been stupid with these, but Chrome embedded everything correctly, so here's hoping.

--- a/games/index.html
+++ b/games/index.html
@@ -53,11 +53,13 @@
 		<div class="project-div">
 			<h3 class="project-subtitle-text">Warner Bros | Technical Sound Designer</h3>
 			<div class="project-content-left">
-				<p class="remove-top-margin-text">Absolutely Unreal!<br><br>In 2025 I began working for Warner Brothers, almost entirely on Fortnite: Battle Royale.</p>
+				<p class="remove-top-margin-text">Absolutely Unreal!<br><br>In 2025 I began working for Warner Brothers, on contract with Epic to help on Fortnite: Battle Royale.</p>
 				<p>At the moment of this writing, I'm still new on the team, so naturally this section is a work in progress. Stay tuned for all the exciting stuff we're working on!</p>
 			</div>
 			<div class="project-content-right">
-				<iframe class="project-video-embed" src="https://www.youtube.com/embed/X_zzh-g2a4M" title="Youtube video, Fortnite Super Showdown Story Event trailer." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<iframe class="project-video-embed" src="https://www.youtube.com/embed/7ZIbokU9tRg" title="Youtube video, Fortnite Battle Royale Shock 'N Awesome Live Action Trailer with Power Rangers." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+				<!--Backup embed, in case the former fails or gets embeds restricted at some point-->
+					<!--<iframe width="560" height="315" src="https://www.youtube.com/embed/gabkkP5kaQs?si=8V4hjW49BkyEPwPt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>-->
 				<p>You can play Fortnite for free on almost every platform imaginable. Below are just a few options.</p>
 				<a class="download-button-link" target="_self" href="https://www.fortnite.com/download">Play on PC or Mobile</a>
 				<a class="download-button-link" target="_self" href="https://www.xbox.com/en-US/games/store/fortnite/bt5p2x999vh2">Xbox</a>
