Updated Games Lists
Slight update to Favorite Games Lately, but had to throw in Battlefield 6 to anticipated games, which knocked GTA6 off the list since I'm not actually anticipating it all that much

--- a/index.html
+++ b/index.html
@@ -136,19 +136,19 @@
 				<li>World of Warcraft (Classic)</li>
 				<li>Forza Motorsport</li>
 				<li>Lil Gator Game</li>
-				<li>Art of Rally</li>
+				<li>Abiotic Factor</li>
 				<li>Half-Life</li>
 			</ul>
 		</div>
 		<div class="content-bio-favgames-column-2">
 			<h3 class="favorites-headers">Anticipated games:</h3>
 			<ul class="ul-favorites-list">
+				<li>Battlefield 6</li>
 				<li>Big Walk</li>
-				<li>Marathon</li>
 				<li>Star Wars: Zero Company</li>
+				<li>Marathon</li>
 				<li>Gears of War: E-Day</li>
 				<li>Ghost of Yōtei</li>
-				<li>Grand Theft Auto 6</li>
 			</ul>
 		</div>
 		<div class="content-bio-favgames-column-3">
