--- a/index.html
+++ b/index.html
@@ -132,23 +132,23 @@
 		<div class="content-bio-favgames-column-1">
 			<h3 class="favorites-headers">Favorite games lately:</h3>
 			<ul class="ul-favorites-list">
+				<li>Abiotic Factor</li>
+				<li>Fortnite: Battle Royale</li>
+				<li>Jet Set Radio</li>
 				<li>Peak</li>
-				<li>World of Warcraft (Classic)</li>
 				<li>Forza Motorsport</li>
 				<li>Lil Gator Game</li>
-				<li>Abiotic Factor</li>
-				<li>Half-Life</li>
 			</ul>
 		</div>
 		<div class="content-bio-favgames-column-2">
 			<h3 class="favorites-headers">Anticipated games:</h3>
 			<ul class="ul-favorites-list">
 				<li>Battlefield 6</li>
+				<li>Crashout Crew</li>
 				<li>Big Walk</li>
+				<li>Jet Set Radio (reboot)</li>
 				<li>Star Wars: Zero Company</li>
 				<li>Marathon</li>
-				<li>Gears of War: E-Day</li>
-				<li>Ghost of Yōtei</li>
 			</ul>
 		</div>
 		<div class="content-bio-favgames-column-3">
